[package]
name = "trufflescan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~1", features = ["full"] }
zerocopy = { version = "0.7.31", features = ["derive", "byteorder"] }
byteorder = "1.5.0"
rand = "0.9.0-alpha.0"
