[package]
name = "trufflescan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~1", features = ["full"] }
zerocopy = { version = "0.7", features = ["derive", "byteorder"] }
byteorder = "1"
rand = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4.21"
